--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
     <p class="subtitle">Kesson Space</p>
   </div>
 
-  <script type="module" src="./src/main.js"></script>
+  <!-- <script type="module" src="./src/versions/v001-baseline.js"></script> -->
+  <!-- <script type="module" src="./src/versions/v002-gemini-fractal.js"></script> -->
+  <script type="module" src="./src/versions/v003-soul-core.js"></script>
+  <!-- <script type="module" src="./src/main.js"></script> -->
 </body>
 </html>
