--- a/index.html
+++ b/index.html
@@ -90,7 +90,8 @@
 
   <!-- <script type="module" src="./src/versions/v001-baseline.js"></script> -->
   <!-- <script type="module" src="./src/versions/v002-gemini-fractal.js"></script> -->
-  <script type="module" src="./src/versions/v003-soul-core.js"></script>
+  <!-- <script type="module" src="./src/versions/v003-soul-core.js"></script> -->
+  <script type="module" src="./src/versions/v004-slate-blue.js"></script>
   <!-- <script type="module" src="./src/main.js"></script> -->
 </body>
 </html>
