feat: add English taglines below Japanese lines
- "Don't discard what's missing — turn it into a question"
- "Embrace the drift between prediction and reality"
- Slightly smaller/dimmer style (.tagline-en) for bilingual hierarchy

--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
       line-height: 1.8;
     }
 
+    .tagline-en {
+      margin-top: 0.3rem;
+      font-size: 0.75rem;
+      color: rgba(255, 255, 255, 0.35);
+      font-family: 'Georgia', serif;
+      letter-spacing: 0.03em;
+      line-height: 1.8;
+    }
+
     .tagline-fade {
       opacity: 0;
       animation: fadeInOut 7s ease-in-out infinite;
@@ -113,7 +122,9 @@
     </a>
     <p class="subtitle" id="title-sub">Kesson Space</p>
     <p class="tagline tagline-fade">欠けを捨てず、問いに変える</p>
+    <p class="tagline-en tagline-fade">Don't discard what's missing — turn it into a question</p>
     <p class="tagline tagline-fade tagline-delay">予測のズレを、抱き続ける</p>
+    <p class="tagline-en tagline-fade tagline-delay">Embrace the drift between prediction and reality</p>
   </div>
 
   <script type="module" src="./src/main.js"></script>
