--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
     .taglines {
       display: none;
-      margin-top: 1rem;
+      margin-bottom: 1rem;
     }
 
     .taglines.active {
@@ -113,11 +113,6 @@
   <div id="canvas-container"></div>
   
   <div id="overlay">
-    <a href="https://uminomae.github.io/pjdhiro/thinking-kesson/" target="_blank" rel="noopener">
-      <h1 id="title-h1">欠損駆動思考</h1>
-    </a>
-    <p class="subtitle" id="title-sub">Kesson Space</p>
-
     <div class="taglines" id="taglines-ja">
       <p class="tagline">欠けを捨てず、問いに変える</p>
       <p class="tagline">予測のズレを、抱き続ける</p>
@@ -127,6 +122,11 @@
       <p class="tagline-en">Don't discard what's missing — turn it into a question</p>
       <p class="tagline-en">Embrace the drift between prediction and reality</p>
     </div>
+
+    <a href="https://uminomae.github.io/pjdhiro/thinking-kesson/" target="_blank" rel="noopener">
+      <h1 id="title-h1">欠損駆動思考</h1>
+    </a>
+    <p class="subtitle" id="title-sub">Kesson Space</p>
   </div>
 
   <script>
