--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
       z-index: 10;
       pointer-events: none;
       text-align: left;
+      /* 初期状態: JS呼吸で制御 */
+      opacity: 0.1;
+      filter: blur(3px);
+      transform: scale(0.95);
+      transform-origin: left bottom;
+      will-change: opacity, filter, transform;
     }
     
     #overlay a {
@@ -47,7 +53,6 @@
       letter-spacing: 0.5em;
       font-size: 2.0rem;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
-      animation: breathe 8s infinite alternate ease-in-out;
       margin-bottom: 0.6rem;
       transition: color 0.4s ease;
     }
@@ -62,7 +67,6 @@
       letter-spacing: 0.3em;
       font-weight: normal;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
-      animation: breathe 8s infinite alternate ease-in-out;
     }
 
     #taglines {
@@ -76,7 +80,6 @@
       letter-spacing: 0.05em;
       line-height: 1.8;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
-      animation: breathe 8s infinite alternate ease-in-out;
     }
 
     .tagline-en {
@@ -86,12 +89,6 @@
       letter-spacing: 0.03em;
       line-height: 1.8;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
-      animation: breathe 8s infinite alternate ease-in-out;
-    }
-
-    @keyframes breathe {
-      0% { opacity: 0.1; filter: blur(3px); transform: scale(0.95); }
-      100% { opacity: 0.8; filter: blur(0px); transform: scale(1.0); }
     }
   </style>
   
