refactor: Bootstrap 5 dev panel with accordion + form switches
- index.html: add Bootstrap 5.3.3 CSS/JS CDN
- dev-panel.js: rewrite with Bootstrap accordion (collapsible sections),
  form-switch toggles, form-range sliders, dark theme
- Body styles override Bootstrap reboot to protect main UI

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>欠損駆動思考 - Kesson Space</title>
+
+  <!-- Bootstrap 5 (devパネル用) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
-    * {
+    /* --- Bootstrapリセットの上書き: 本体UIを保護 --- */
+    body {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-    
-    body {
       overflow: hidden;
       background: #050508;
       font-family: "Sawarabi Mincho", "Yu Mincho", "MS PMincho", serif;
@@ -33,7 +34,6 @@
       z-index: 10;
       pointer-events: none;
       text-align: left;
-      /* 初期状態: JS呼吸で制御 */
       opacity: 0.1;
       filter: blur(3px);
       transform: scale(0.95);
@@ -113,6 +113,8 @@
     <p class="subtitle" id="title-sub">Kesson Space</p>
   </div>
 
+  <!-- Bootstrap JS (devパネルのアコーディオン用) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
