style: separate mobile font-size for ja/en (h1, subtitle)
Mobile ≤600px:
- ja: h1 1.0rem/0.25em, subtitle 0.65rem/0.15em
- en: h1 0.85rem/0.12em, subtitle 0.55rem/0.08em
Uses html[lang="en"] selector (set by main.js)

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 
     /* --- モバイル対応 --- */
     @media (max-width: 600px) {
+      /* 日本語（デフォルト） */
       h1 {
         font-size: 1.0rem;
         letter-spacing: 0.25em;
@@ -125,6 +126,15 @@
       .subtitle {
         font-size: 0.65rem;
         letter-spacing: 0.15em;
+      }
+      /* 英語 */
+      html[lang="en"] h1 {
+        font-size: 0.85rem;
+        letter-spacing: 0.12em;
+      }
+      html[lang="en"] .subtitle {
+        font-size: 0.55rem;
+        letter-spacing: 0.08em;
       }
       #overlay {
         left: 20px;
