--- a/index.html
+++ b/index.html
@@ -72,26 +72,32 @@
       color: inherit;
     }
 
+    /* ============================
+       h1 / subtitle — 日本語デフォルト
+       ============================ */
     h1 {
       color: rgba(255, 255, 255, 0.5);
       font-weight: normal;
-      letter-spacing: 0.5em;
       font-size: 2.0rem;
-      text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
+      letter-spacing: 0.5em;
+      line-height: 1.6;
       margin-bottom: 0.6rem;
+      text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
       transition: color 0.4s ease;
-    }
-
-    #overlay a:hover h1 {
-      color: rgba(255, 255, 255, 0.7);
     }
 
     .subtitle {
       color: rgba(255, 255, 255, 0.5);
       font-size: 1.3rem;
       letter-spacing: 0.3em;
+      line-height: 1.5;
+      margin-top: 0;
       font-weight: normal;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
+    }
+
+    #overlay a:hover h1 {
+      color: rgba(255, 255, 255, 0.7);
     }
 
     #taglines {
@@ -112,29 +118,59 @@
       color: rgba(255, 255, 255, 0.4);
       font-family: 'Georgia', serif;
       letter-spacing: 0.03em;
-      line-height: 1.8;
+      line-height: 1.6;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
     }
 
-    /* --- モバイル対応 --- */
+    /* ============================
+       英語オーバーライド（デスクトップ）
+       ============================ */
+    html[lang="en"] h1 {
+      font-size: 1.8rem;
+      letter-spacing: 0.15em;
+      line-height: 1.3;
+      margin-bottom: 0.4rem;
+      font-family: 'Georgia', serif;
+    }
+
+    html[lang="en"] .subtitle {
+      font-size: 1.1rem;
+      letter-spacing: 0.1em;
+      line-height: 1.3;
+      font-family: 'Georgia', serif;
+    }
+
+    html[lang="en"] #taglines {
+      margin-bottom: 0.8rem;
+    }
+
+    /* ============================
+       モバイル対応
+       ============================ */
     @media (max-width: 600px) {
-      /* 日本語（デフォルト） */
+      /* 日本語 */
       h1 {
         font-size: 1.0rem;
         letter-spacing: 0.25em;
+        line-height: 1.5;
+        margin-bottom: 0.4rem;
       }
       .subtitle {
         font-size: 0.65rem;
         letter-spacing: 0.15em;
+        line-height: 1.4;
       }
       /* 英語 */
       html[lang="en"] h1 {
         font-size: 0.85rem;
         letter-spacing: 0.12em;
+        line-height: 1.25;
+        margin-bottom: 0.3rem;
       }
       html[lang="en"] .subtitle {
         font-size: 0.55rem;
         letter-spacing: 0.08em;
+        line-height: 1.25;
       }
       #overlay {
         left: 20px;
