style: add mobile tagline/tagline-en overrides
Mobile ≤600px:
- .tagline: 0.85rem→0.75rem, lh 1.8→1.6
- .tagline-en: 0.75rem→0.6rem, ls 0.03→0.02em, lh 1.6→1.4

--- a/index.html
+++ b/index.html
@@ -160,6 +160,15 @@
         letter-spacing: 0.15em;
         line-height: 1.4;
       }
+      .tagline {
+        font-size: 0.75rem;
+        line-height: 1.6;
+      }
+      .tagline-en {
+        font-size: 0.6rem;
+        letter-spacing: 0.02em;
+        line-height: 1.4;
+      }
       /* 英語 */
       html[lang="en"] h1 {
         font-size: 1.4rem;
