style: overlay/credit position px → % for responsive layout
- #overlay: bottom 60px→8%, left 40px→5%
- #credit: top 20px→3%, left 24px→3%
- Remove mobile px overrides (% works across all orientations)

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     /* 左上: クレジット */
     #credit {
       position: fixed;
-      top: 20px;
-      left: 24px;
+      top: 3%;
+      left: 3%;
       z-index: 10;
       pointer-events: none;
     }
@@ -54,8 +54,8 @@
     
     #overlay {
       position: absolute;
-      bottom: 60px;
-      left: 40px;
+      bottom: 8%;
+      left: 5%;
       z-index: 10;
       pointer-events: none;
       text-align: left;
@@ -180,14 +180,6 @@
         font-size: 0.55rem;
         letter-spacing: 0.08em;
         line-height: 1.25;
-      }
-      #overlay {
-        left: 20px;
-        bottom: 40px;
-      }
-      #credit {
-        left: 16px;
-        top: 14px;
       }
     }
 
