--- a/index.html
+++ b/index.html
@@ -145,10 +145,9 @@
     }
 
     /* ============================
-       モバイル対応
+       モバイル縦 (portrait narrow)
        ============================ */
     @media (max-width: 600px) {
-      /* 日本語 */
       h1 {
         font-size: 1.8rem;
         letter-spacing: 0.25em;
@@ -169,7 +168,6 @@
         letter-spacing: 0.02em;
         line-height: 1.4;
       }
-      /* 英語 */
       html[lang="en"] h1 {
         font-size: 1.4rem;
         letter-spacing: 0.05em;
@@ -180,6 +178,56 @@
         font-size: 0.55rem;
         letter-spacing: 0.08em;
         line-height: 1.25;
+      }
+    }
+
+    /* ============================
+       モバイル横 (landscape short)
+       高さ≤500pxかつ横向き
+       ============================ */
+    @media (max-height: 500px) and (orientation: landscape) {
+      #credit .credit-line {
+        font-size: 0.55rem;
+        line-height: 1.4;
+      }
+      #credit .credit-signature {
+        font-size: 0.5rem;
+      }
+      h1 {
+        font-size: 1.2rem;
+        letter-spacing: 0.2em;
+        line-height: 1.2;
+        margin-bottom: 0.2rem;
+      }
+      .subtitle {
+        font-size: 0.7rem;
+        letter-spacing: 0.12em;
+        line-height: 1.2;
+      }
+      .tagline {
+        font-size: 0.6rem;
+        line-height: 1.3;
+      }
+      .tagline-en {
+        font-size: 0.5rem;
+        line-height: 1.2;
+      }
+      #taglines {
+        margin-bottom: 0.4rem;
+      }
+      #overlay {
+        bottom: 6%;
+      }
+      html[lang="en"] h1 {
+        font-size: 1.0rem;
+        letter-spacing: 0.08em;
+        line-height: 1.15;
+        margin-bottom: 0.15rem;
+      }
+      html[lang="en"] .subtitle {
+        font-size: 0.55rem;
+        letter-spacing: 0.06em;
+        line-height: 1.15;
       }
     }
 
