--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       left: 3%;
       z-index: 10;
       pointer-events: none;
+      transition: opacity 0.3s ease;
     }
     #credit .credit-line {
       font-size: 0.7rem;
@@ -53,7 +54,7 @@
     }
     
     #overlay {
-      position: absolute;
+      position: fixed;
       bottom: 8%;
       left: 5%;
       z-index: 10;
@@ -183,7 +184,6 @@
 
     /* ============================
        モバイル横 (landscape short)
-       高さ≤500pxかつ横向き
        ============================ */
     @media (max-height: 500px) and (orientation: landscape) {
       #credit .credit-line {
@@ -231,10 +231,10 @@
       }
     }
 
-    /* --- ファーストビュー スペーサー --- */
+    /* --- 潜水スペーサー（スクロール余白） --- */
     #hero-spacer {
       position: relative;
-      height: 100vh;
+      height: 250vh;
       z-index: 5;
       pointer-events: none;
     }
@@ -320,6 +320,30 @@
         padding: 60px 20px 80px;
       }
     }
+
+    /* --- 浮上ボタン --- */
+    #surface-btn {
+      position: fixed;
+      bottom: 24px;
+      right: 24px;
+      z-index: 20;
+      background: rgba(100, 150, 255, 0.1);
+      border: 1px solid rgba(100, 150, 255, 0.2);
+      color: rgba(180, 200, 230, 0.5);
+      font-family: 'Georgia', serif;
+      font-size: 0.7rem;
+      letter-spacing: 0.1em;
+      padding: 10px 18px;
+      cursor: pointer;
+      border-radius: 2px;
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.6s ease, background 0.3s ease;
+    }
+    #surface-btn:hover {
+      background: rgba(100, 150, 255, 0.2);
+      color: rgba(220, 230, 245, 0.7);
+    }
   </style>
   
   <script type="importmap">
@@ -355,11 +379,14 @@
     <div class="arrow">▾</div>
   </div>
 
-  <!-- ファーストビュー（Three.jsシーンと重なる領域） -->
+  <!-- 潜水スペーサー（カメラ下降のスクロール余白） -->
   <div id="hero-spacer"></div>
 
-  <!-- 開発ログ（スクロールで表示） -->
+  <!-- 開発ログ（潜水後に到達） -->
   <div id="dev-log"></div>
+
+  <!-- 浮上ボタン -->
+  <button id="surface-btn">↑ surface</button>
 
   <!-- Bootstrap JS (devパネルのアコーディオン用) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
