--- a/index.html
+++ b/index.html
@@ -239,7 +239,12 @@
       pointer-events: none;
     }
 
-    /* --- スクロール案内（下部） --- */
+    /* ============================
+       スクロール案内 — 共通パターン
+       デフォルト非表示、.visible で表示+アニメ開始
+       ============================ */
+
+    /* --- 下部 scroll hint --- */
     #scroll-hint {
       position: fixed;
       bottom: 16px;
@@ -248,7 +253,13 @@
       z-index: 15;
       text-align: center;
       pointer-events: none;
-      transition: opacity 0.6s ease;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 0.6s ease, visibility 0.6s ease;
+    }
+    #scroll-hint.visible {
+      opacity: 1;
+      visibility: visible;
       animation: scrollHintPulse 3s ease-in-out infinite;
     }
     #scroll-hint span {
@@ -264,11 +275,11 @@
       color: rgba(180, 200, 230, 0.25);
     }
     @keyframes scrollHintPulse {
-      0%, 100% { opacity: 0.6; transform: translateX(-50%) translateY(0); }
-      50% { opacity: 1; transform: translateX(-50%) translateY(4px); }
+      0%, 100% { transform: translateX(-50%) translateY(0); }
+      50% { transform: translateX(-50%) translateY(4px); }
     }
 
-    /* --- スクロール案内（上部） --- */
+    /* --- 上部 scroll hint --- */
     #scroll-hint-top {
       position: fixed;
       top: 16px;
