--- a/index.html
+++ b/index.html
@@ -330,11 +330,11 @@
     }
 
     #dev-log .log-header {
-      font-size: 0.75rem;
-      color: rgba(180, 200, 230, 0.4);
+      font-size: 1.0rem;
+      color: rgba(180, 200, 230, 0.8);
       font-family: 'Georgia', serif;
       letter-spacing: 0.15em;
-      text-transform: uppercase;
+      /* text-transform: uppercase; */
       margin-bottom: 8px;
     }
 
