style: add .log-separator, .log-paragraph a link styles
- .log-separator: subtle hr line
- .log-paragraph a: blue link with underline, hover effect
- Preserves user's .log-header edits (1.0rem, 0.8 opacity)

--- a/index.html
+++ b/index.html
@@ -338,6 +338,24 @@
       margin-bottom: 8px;
     }
 
+    .log-separator {
+      border: none;
+      border-top: 1px solid rgba(180, 200, 230, 0.15);
+      margin: 2rem 0;
+    }
+
+    .log-paragraph a {
+      color: rgba(160, 200, 255, 0.7);
+      text-decoration: none;
+      border-bottom: 1px solid rgba(160, 200, 255, 0.3);
+      transition: color 0.3s, border-color 0.3s;
+    }
+
+    .log-paragraph a:hover {
+      color: rgba(180, 215, 255, 0.95);
+      border-bottom-color: rgba(180, 215, 255, 0.6);
+    }
+
     #dev-log .log-date {
       font-size: 0.85rem;
       color: rgba(180, 200, 230, 0.5);
