fix: 操作ガイドを言語トグルの下に配置（top:3%→8%で重なり解消）

--- a/index.html
+++ b/index.html
@@ -329,11 +329,11 @@
     }
 
     /* ============================
-       操作ガイド（右上フロート）
+       操作ガイド（右上、言語トグルの下）
        ============================ */
     #control-guide {
       position: fixed;
-      top: 3%;
+      top: 8%;
       right: 3%;
       z-index: 10;
       pointer-events: none;
@@ -487,7 +487,7 @@
     <p class="subtitle" id="title-sub">Kesson Space</p>
   </div>
 
-  <!-- 右上: 操作ガイド -->
+  <!-- 右上: 操作ガイド（lang-toggle の下に配置） -->
   <div id="control-guide">
     <!-- デスクトップ版 -->
     <div class="guide-row guide-desktop">
