--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
       z-index: 1;
     }
 
-    /* 左上: クレジット */
+    /* ============================
+       左上: クレジット
+       ============================ */
     #credit {
       position: fixed;
       top: 3%;
@@ -46,7 +48,7 @@
       transition: opacity 0.3s ease;
     }
     #credit .credit-line {
-      font-size: 0.7rem;
+      font-size: clamp(0.45rem, 2.0vmin, 0.7rem);
       color: rgba(180, 200, 230, 0.45);
       font-family: 'Georgia', 'Yu Mincho', serif;
       letter-spacing: 0.05em;
@@ -54,13 +56,16 @@
       text-shadow: 0 0 8px rgba(60, 100, 180, 0.2);
     }
     #credit .credit-signature {
-      font-size: 0.65rem;
+      font-size: clamp(0.4rem, 1.8vmin, 0.65rem);
       color: rgba(150, 175, 210, 0.35);
       font-family: 'Georgia', serif;
       letter-spacing: 0.08em;
       margin-top: 2px;
     }
     
+    /* ============================
+       左下: オーバーレイ（タイトル）
+       ============================ */
     #overlay {
       position: fixed;
       bottom: 8%;
@@ -87,8 +92,8 @@
     h1 {
       color: rgba(255, 255, 255, 0.5);
       font-weight: normal;
-      font-size: 2.0rem;
-      letter-spacing: 0.5em;
+      font-size: clamp(1.0rem, 5.5vmin, 2.0rem);
+      letter-spacing: clamp(0.15em, 1.2vmin, 0.5em);
       line-height: 1.6;
       margin-bottom: 0.6rem;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
@@ -97,8 +102,8 @@
 
     .subtitle {
       color: rgba(255, 255, 255, 0.5);
-      font-size: 1.3rem;
-      letter-spacing: 0.3em;
+      font-size: clamp(0.6rem, 3.5vmin, 1.3rem);
+      letter-spacing: clamp(0.1em, 0.8vmin, 0.3em);
       line-height: 1.5;
       margin-top: 0;
       font-weight: normal;
@@ -114,7 +119,7 @@
     }
 
     .tagline {
-      font-size: 0.85rem;
+      font-size: clamp(0.5rem, 2.4vmin, 0.85rem);
       color: rgba(255, 255, 255, 0.5);
       font-family: 'Yu Mincho', 'MS PMincho', serif;
       letter-spacing: 0.05em;
@@ -123,7 +128,7 @@
     }
 
     .tagline-en {
-      font-size: 0.75rem;
+      font-size: clamp(0.4rem, 2.0vmin, 0.75rem);
       color: rgba(255, 255, 255, 0.4);
       font-family: 'Georgia', serif;
       letter-spacing: 0.03em;
@@ -132,19 +137,19 @@
     }
 
     /* ============================
-       英語オーバーライド（デスクトップ）
+       英語オーバーライド
        ============================ */
     html[lang="en"] h1 {
-      font-size: 1.8rem;
-      letter-spacing: 0.15em;
+      font-size: clamp(0.85rem, 5.0vmin, 1.8rem);
+      letter-spacing: clamp(0.05em, 0.4vmin, 0.15em);
       line-height: 1.3;
       margin-bottom: 0.4rem;
       font-family: 'Georgia', serif;
     }
 
     html[lang="en"] .subtitle {
-      font-size: 1.1rem;
-      letter-spacing: 0.1em;
+      font-size: clamp(0.5rem, 3.0vmin, 1.1rem);
+      letter-spacing: clamp(0.06em, 0.3vmin, 0.1em);
       line-height: 1.3;
       font-family: 'Georgia', serif;
     }
@@ -154,88 +159,15 @@
     }
 
     /* ============================
-       モバイル縦 (portrait narrow)
-       ============================ */
-    @media (max-width: 600px) {
-      h1 {
-        font-size: 1.8rem;
-        letter-spacing: 0.25em;
-        line-height: 1.5;
-        margin-bottom: 0.4rem;
-      }
-      .subtitle {
-        font-size: 0.85rem;
-        letter-spacing: 0.15em;
-        line-height: 1.4;
-      }
-      .tagline {
-        font-size: 0.75rem;
-        line-height: 1.6;
-      }
-      .tagline-en {
-        font-size: 0.6rem;
-        letter-spacing: 0.02em;
-        line-height: 1.4;
-      }
-      html[lang="en"] h1 {
-        font-size: 1.4rem;
-        letter-spacing: 0.05em;
-        line-height: 1.25;
-        margin-bottom: 0.3rem;
-      }
-      html[lang="en"] .subtitle {
-        font-size: 0.55rem;
-        letter-spacing: 0.08em;
-        line-height: 1.25;
-      }
-    }
-
-    /* ============================
        モバイル横 (landscape short)
+       — vmin で自動縮小されるが、追加微調整
        ============================ */
     @media (max-height: 500px) and (orientation: landscape) {
-      #credit .credit-line {
-        font-size: 0.55rem;
-        line-height: 1.4;
-      }
-      #credit .credit-signature {
-        font-size: 0.5rem;
-      }
-      h1 {
-        font-size: 1.2rem;
-        letter-spacing: 0.2em;
-        line-height: 1.2;
-        margin-bottom: 0.2rem;
-      }
-      .subtitle {
-        font-size: 0.7rem;
-        letter-spacing: 0.12em;
-        line-height: 1.2;
-      }
-      .tagline {
-        font-size: 0.6rem;
-        line-height: 1.3;
-      }
-      .tagline-en {
-        font-size: 0.5rem;
-        line-height: 1.2;
-      }
       #taglines {
         margin-bottom: 0.4rem;
       }
       #overlay {
         bottom: 6%;
-      }
-      html[lang="en"] h1 {
-        font-size: 1.0rem;
-        letter-spacing: 0.08em;
-        line-height: 1.15;
-        margin-bottom: 0.15rem;
-      }
-      html[lang="en"] .subtitle {
-        font-size: 0.55rem;
-        letter-spacing: 0.06em;
-        line-height: 1.15;
       }
     }
 
@@ -272,14 +204,14 @@
     }
     #scroll-hint span {
       display: block;
-      font-size: 0.65rem;
+      font-size: clamp(0.4rem, 1.8vmin, 0.65rem);
       color: rgba(180, 200, 230, 0.3);
       font-family: 'Georgia', serif;
       letter-spacing: 0.1em;
       margin-bottom: 4px;
     }
     #scroll-hint .arrow {
-      font-size: 1.2rem;
+      font-size: clamp(0.7rem, 3.5vmin, 1.2rem);
       color: rgba(180, 200, 230, 0.25);
     }
     @keyframes scrollHintPulse {
@@ -308,12 +240,12 @@
       animation: scrollHintTopPulse 3s ease-in-out infinite;
     }
     #scroll-hint-top .arrow {
-      font-size: 1.2rem;
+      font-size: clamp(0.7rem, 3.5vmin, 1.2rem);
       color: rgba(180, 200, 230, 0.25);
     }
     #scroll-hint-top span {
       display: block;
-      font-size: 0.65rem;
+      font-size: clamp(0.4rem, 1.8vmin, 0.65rem);
       color: rgba(180, 200, 230, 0.3);
       font-family: 'Georgia', serif;
       letter-spacing: 0.1em;
@@ -348,18 +280,18 @@
       margin-bottom: 3px;
     }
     #control-guide .guide-key {
-      font-size: 0.55rem;
+      font-size: clamp(0.35rem, 1.6vmin, 0.55rem);
       color: rgba(180, 200, 230, 0.35);
       font-family: 'SF Mono', 'Consolas', 'Monaco', monospace;
       letter-spacing: 0.03em;
       white-space: nowrap;
     }
     #control-guide .guide-sep {
-      font-size: 0.5rem;
+      font-size: clamp(0.3rem, 1.4vmin, 0.5rem);
       color: rgba(180, 200, 230, 0.2);
     }
     #control-guide .guide-action {
-      font-size: 0.55rem;
+      font-size: clamp(0.35rem, 1.6vmin, 0.55rem);
       color: rgba(180, 200, 230, 0.3);
       font-family: 'Georgia', serif;
       letter-spacing: 0.06em;
@@ -387,7 +319,6 @@
       color: rgba(180, 200, 230, 0.8);
       font-family: 'Georgia', serif;
       letter-spacing: 0.15em;
-      /* text-transform: uppercase; */
       margin-bottom: 8px;
     }
 
@@ -445,7 +376,7 @@
       border: 1px solid rgba(100, 150, 255, 0.2);
       color: rgba(180, 200, 230, 0.5);
       font-family: 'Georgia', serif;
-      font-size: 0.7rem;
+      font-size: clamp(0.45rem, 2.0vmin, 0.7rem);
       letter-spacing: 0.1em;
       padding: 10px 18px;
       cursor: pointer;
