ISS-001: ナビゲーションアクセシビリティ改善（Phase 1-4）
Phase 1: コード修正
- nav-objects.js: HTMLラベルをdiv→button化、pointer-events: auto、
  aria-label、キーボードイベント対応、focus/hoverスタイル追加
- lang-toggle.js: aria-label追加
- index.html: 浮上ボタンにaria-label追加

Phase 2: E2Eテスト追加
- e2e-runner.js: TC-09（リンク機能検証）、TC-10（キーボードナビ）追加
- e2e-test-design.md: TC-09、TC-10セクション追加

Phase 3: ドキュメント更新
- CURRENT.md: Session #12として記録
- ISS-001: 完了チェックリスト更新

Closes ISS-001

--- a/index.html
+++ b/index.html
@@ -389,6 +389,10 @@
       background: rgba(100, 150, 255, 0.2);
       color: rgba(220, 230, 245, 0.7);
     }
+    #surface-btn:focus {
+      outline: 2px solid rgba(100, 150, 255, 0.8);
+      outline-offset: 4px;
+    }
   </style>
   
   <script type="importmap">
@@ -473,8 +477,8 @@
   <!-- 開発ログ（潜水後に到達） -->
   <div id="dev-log"></div>
 
-  <!-- 浮上ボタン -->
-  <button id="surface-btn">↑ surface</button>
+  <!-- CHANGED: aria-label 追加 -->
+  <button id="surface-btn" aria-label="ページ上部に戻る">↑ surface</button>
 
   <!-- Bootstrap JS (devパネルのアコーディオン用) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
