--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>欠損駆動思考 - Kesson Space</title>
 
-  <!-- Bootstrap 5 (devパネル用) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- CHANGED: Bootstrap CSS/JS を削除。dev-panel.js が ?dev 時に動的ロードする -->
 
   <style>
     /* --- Bootstrapリセットの上書き: 本体UIを保護 --- */
@@ -480,8 +479,7 @@
   <!-- CHANGED: aria-label 追加 -->
   <button id="surface-btn" aria-label="ページ上部に戻る">↑ surface</button>
 
-  <!-- Bootstrap JS (devパネルのアコーディオン用) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- CHANGED: Bootstrap JS 削除。dev-panel.js が ?dev 時に動的ロードする -->
   <script type="module" src="./src/main.js"></script>
 </body>
 </html>
