fix: favicon link rel追加 — GitHub Pagesサブディレクトリ対応 (T-002)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>欠損駆動思考 - Kesson Space</title>
+  <link rel="icon" href="./favicon.ico">
 
   <!-- CHANGED: Bootstrap CSS/JS を削除。dev-panel.js が ?dev 時に動的ロードする -->
 
