--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
   <!-- PERF: CDN TLS接続を先行確立 -->
   <link rel="preconnect" href="https://cdn.jsdelivr.net" crossorigin>
-  <!-- FIX: Google Fonts preconnect + Sawarabi Mincho 読み込み -->
+  <!-- FIX: Google Fonts — Noto Serif JP (高品質明朝体) -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Sawarabi+Mincho&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;400&display=swap" rel="stylesheet">
 
   <!-- PERF: modulepreload — 深いimportチェーンを並列フェッチ
        main.js → scene.js → shaders/* の逐次解決を回避 -->
@@ -57,7 +57,7 @@
       overflow-x: hidden;
       overflow-y: auto;
       background: #050508;
-      font-family: "Sawarabi Mincho", "Yu Mincho", "MS PMincho", serif;
+      font-family: "Noto Serif JP", "Yu Mincho", "MS PMincho", serif;
     }
     
     #canvas-container {
@@ -83,7 +83,7 @@
     #credit .credit-line {
       font-size: clamp(0.45rem, 2.0vmin, 0.7rem);
       color: rgba(180, 200, 230, 0.45);
-      font-family: 'Georgia', 'Yu Mincho', serif;
+      font-family: 'Georgia', 'Noto Serif JP', serif;
       letter-spacing: 0.05em;
       line-height: 1.7;
       text-shadow: 0 0 8px rgba(60, 100, 180, 0.2);
@@ -123,8 +123,9 @@
        h1 / subtitle — 日本語デフォルト
        ============================ */
     h1 {
-      color: rgba(255, 255, 255, 0.5);
-      font-weight: normal;
+      color: rgba(230, 235, 245, 0.75);
+      font-family: "Noto Serif JP", "Yu Mincho", "MS PMincho", serif;
+      font-weight: 300;
       font-size: clamp(1.0rem, 5.5vmin, 2.0rem);
       letter-spacing: clamp(0.15em, 1.2vmin, 0.5em);
       line-height: 1.6;
@@ -134,7 +135,8 @@
     }
 
     .subtitle {
-      color: rgba(255, 255, 255, 0.5);
+      color: rgba(210, 220, 240, 0.65);
+      font-family: 'Georgia', "Noto Serif JP", serif;
       font-size: clamp(0.6rem, 3.5vmin, 1.3rem);
       letter-spacing: clamp(0.1em, 0.8vmin, 0.3em);
       line-height: 1.5;
@@ -144,7 +146,7 @@
     }
 
     #overlay a:hover h1 {
-      color: rgba(255, 255, 255, 0.7);
+      color: rgba(240, 245, 255, 0.85);
     }
 
     #taglines {
@@ -153,8 +155,8 @@
 
     .tagline {
       font-size: clamp(0.5rem, 2.4vmin, 0.85rem);
-      color: rgba(255, 255, 255, 0.5);
-      font-family: 'Sawarabi Mincho', 'Yu Mincho', 'MS PMincho', serif;
+      color: rgba(220, 230, 245, 0.55);
+      font-family: "Noto Serif JP", "Yu Mincho", "MS PMincho", serif;
       letter-spacing: 0.05em;
       line-height: 1.8;
       text-shadow: 0 0 30px rgba(100, 150, 255, 0.3);
@@ -162,7 +164,7 @@
 
     .tagline-en {
       font-size: clamp(0.4rem, 2.0vmin, 0.75rem);
-      color: rgba(255, 255, 255, 0.4);
+      color: rgba(200, 215, 235, 0.45);
       font-family: 'Georgia', serif;
       letter-spacing: 0.03em;
       line-height: 1.6;
@@ -386,7 +388,7 @@
     #dev-log .log-paragraph {
       font-size: 0.82rem;
       color: rgba(200, 215, 235, 0.55);
-      font-family: 'Sawarabi Mincho', 'Yu Mincho', 'MS PMincho', 'Georgia', serif;
+      font-family: "Noto Serif JP", "Yu Mincho", "MS PMincho", 'Georgia', serif;
       line-height: 2.2;
       letter-spacing: 0.04em;
       margin-bottom: 2.0em;
