fix: h1/subtitle/tagline を白くクッキリに戻す
h1: rgba(230,235,245,0.75) → rgba(255,255,255,0.95), weight 300→400
subtitle: rgba(210,220,240,0.65) → rgba(255,255,255,0.85)
tagline: rgba(220,230,245,0.55) → rgba(255,255,255,0.75)
hover: → rgba(255,255,255,1.0)

呼吸アニメーションでoverlayのopacityが下がるため、
CSS側で高めのopacityにしないと灰色に見える

--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
     }
 
     /* ============================
-       h1 / subtitle — 日本語デフォルト
+       h1 / subtitle — 白くクッキリ
        ============================ */
     h1 {
-      color: rgba(230, 235, 245, 0.75);
+      color: rgba(255, 255, 255, 0.95);
       font-family: "Noto Serif JP", "Yu Mincho", "MS PMincho", serif;
-      font-weight: 300;
+      font-weight: 400;
       font-size: clamp(1.0rem, 5.5vmin, 2.0rem);
       letter-spacing: clamp(0.15em, 1.2vmin, 0.5em);
       line-height: 1.6;
@@ -135,7 +135,7 @@
     }
 
     .subtitle {
-      color: rgba(210, 220, 240, 0.65);
+      color: rgba(255, 255, 255, 0.85);
       font-family: 'Georgia', "Noto Serif JP", serif;
       font-size: clamp(0.6rem, 3.5vmin, 1.3rem);
       letter-spacing: clamp(0.1em, 0.8vmin, 0.3em);
@@ -146,7 +146,7 @@
     }
 
     #overlay a:hover h1 {
-      color: rgba(240, 245, 255, 0.85);
+      color: rgba(255, 255, 255, 1.0);
     }
 
     #taglines {
@@ -155,7 +155,7 @@
 
     .tagline {
       font-size: clamp(0.5rem, 2.4vmin, 0.85rem);
-      color: rgba(220, 230, 245, 0.55);
+      color: rgba(255, 255, 255, 0.75);
       font-family: "Noto Serif JP", "Yu Mincho", "MS PMincho", serif;
       letter-spacing: 0.05em;
       line-height: 1.8;
@@ -164,7 +164,7 @@
 
     .tagline-en {
       font-size: clamp(0.4rem, 2.0vmin, 0.75rem);
-      color: rgba(200, 215, 235, 0.45);
+      color: rgba(255, 255, 255, 0.55);
       font-family: 'Georgia', serif;
       letter-spacing: 0.03em;
       line-height: 1.6;
