refactor: GemシェーダーGLSLをsrc/shaders/gem-orb.glsl.jsに分離 (#2)
nav-objects.jsに145行埋め込まれていたgemMeshVertexShader/
gemMeshFragmentShaderを専用ファイルに切り出し。
他のシェーダー（background.js, water.js等）と同じパターンに統一。
- 新規: src/shaders/gem-orb.glsl.js
- nav-objects.js: import文で参照
- index.html: modulepreload追加

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
   <link rel="modulepreload" href="./src/i18n.js">
   <link rel="modulepreload" href="./src/scroll-ui.js">
   <link rel="modulepreload" href="./src/shaders/noise.glsl.js">
+  <link rel="modulepreload" href="./src/shaders/gem-orb.glsl.js">
   <link rel="modulepreload" href="./src/shaders/background.js">
   <link rel="modulepreload" href="./src/shaders/water.js">
   <link rel="modulepreload" href="./src/shaders/kesson.js">
